# bitcoin-haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  impl-btc.cabal
app/: Main.hs
plan/: bitcoin_serialization_plan.md
src/: EllipticCurve.hs  Field.hs  Secp256k1.hs  Signature.hs
src/Bitcoin/: BloomFilter.hs  Keys.hs  MerkleTree.hs  Transaction.hs  VarInt.hs
src/Bitcoin/Keys/: DER.hs  README.md  SEC.hs  WIF.hs
src/Bitcoin/Network/: Connection.hs  Discovery.hs  Handshake.hs  Message.hs  Peer.hs  PeerSelection.hs  README.md  Verifier.hs
src/Bitcoin/Network/Message/: Header.hs  NetworkMagic.hs
src/Bitcoin/Network/Message/Payload/: Block.hs  FilterAdd.hs  FilterClear.hs  FilterLoad.hs  GetData.hs  GetHeaders.hs  Headers.hs  Inv.hs  InvType.hs  MerkleBlock.hs  MessagePayload.hs  PingPong.hs  Tx.hs  VerAck.hs  Version.hs
src/Bitcoin/Utils/: Hex.hs
src/ECDSA/: Signature.hs
src/ECDSA/Curve/: EllipticCurve.hs  Secp256k1.hs
src/ECDSA/Field/: FiniteField.hs  RationalField.hs
src/ECDSA/Utils/: Arithmetic.hs  DetermineK.hs  Hash.hs  Prime.hs
src/Field/: FiniteField.hs  RationalField.hs  RealField.hs
src/Utils/: Arithmetic.hs  Base58.hs  DetermineK.hs  Hash.hs  Hex.hs  Logger.hs  Prime.hs
src/Utils/Print/: PrintTransaction.hs
test/: EllipticCurveSpec.hs  FiniteFieldSpec.hs  Main.hs  PrimeSpec.hs  RationalFieldSpec.hs  RealFieldSpec.hs  Secp256k1Spec.hs  SignatureSpec.hs
test/Bitcoin/: BloomFilterSpec.hs  MerkleTreeSpec.hs  TransactionSpec.hs
test/Bitcoin/Keys/: DERSpec.hs  SECSpec.hs  WIFSpec.hs
test/Bitcoin/Network/: BlockSpec.hs  ConnectionSpec.hs  DiscoverySpec.hs
test/ECDSA/: SignatureSpec.hs
test/ECDSA/Curve/: EllipticCurveSpec.hs
test/ECDSA/Field/: FiniteFieldSpec.hs  RationalFieldSpec.hs
test/ECDSA/Utils/: HashSpec.hs  PrimeSpec.hs
test/Utils/: DetermineKSpec.hs  HashSpec.hs  PrimeSpec.hs
