cabal-version:      3.0

name:               impl-btc

version:            0.1.6

synopsis: Implementation for practice of Programming Bitcoin book
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tailor
maintainer:         ltyiz07@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  ECDSA.Signature
                    , ECDSA.Field.RationalField
                    , ECDSA.Field.FiniteField
                    , ECDSA.Curve.EllipticCurve
                    , ECDSA.Curve.Secp256k1
                    , Bitcoin.Keys.SEC
                    , Bitcoin.Keys.DER
                    , Bitcoin.Keys.WIF
                    , Bitcoin.Transaction
                    , Bitcoin.Network.Discovery
                    , Bitcoin.Network.Message
                    , Bitcoin.Network.Connection
                    , Utils.Prime
                    , Utils.Hex
                    , Utils.Hash
                    , Utils.Arithmetic
                    , Utils.Print.PrintTransaction

    other-modules:    Utils.Base58
                    , Bitcoin.VarInt

    build-depends:    base ^>=4.21.0.0
                    , text ^>= 2.1.1
                    , bytestring ^>= 0.11.4
                    , crypton ^>= 1.0
                    , base16-bytestring ^>= 1.0
                    , memory ^>= 0.18
                    , cereal ^>= 0.5
                    , base58-bytestring ^>= 0.1
                    , network ^>= 3.2
                    , time ^>= 1.12
                    , random ^>= 1.2

    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions: DataKinds
                      , KindSignatures
                      , TypeApplications
                      , GeneralizedNewtypeDeriving
                      , ScopedTypeVariables
                      , BangPatterns

executable impl-btc
    import:           warnings
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
                    , impl-btc
    hs-source-dirs:   app
    default-language: GHC2024

test-suite impl-btc-test
    import:           warnings
    default-language: GHC2024
    other-modules:    Utils.PrimeSpec
                    , Utils.HashSpec
                    , ECDSA.Field.FiniteFieldSpec
                    , ECDSA.Field.RationalFieldSpec
                    , ECDSA.Curve.EllipticCurveSpec
                    , ECDSA.SignatureSpec
                    , Bitcoin.Keys.SECSpec
                    , Bitcoin.Keys.DERSpec
                    , Bitcoin.Keys.WIFSpec
                    , Bitcoin.TransactionSpec
                    , Bitcoin.Network.DiscoverySpec
                    , Bitcoin.Network.ConnectionSpec

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , impl-btc
                    , hspec ^>=2.11
                    , QuickCheck ^>=2.14
                    , text ^>= 2.1.1
                    , bytestring ^>= 0.11.4
                    , base16-bytestring ^>= 1.0
                    , cereal ^>= 0.5
